--- a/.github/workflows/bdixtv247.yml
+++ b/.github/workflows/bdixtv247.yml
@@ -34,12 +34,12 @@ jobs:
 
       # Runs a set of commands using the runner's shell
       - name: checkout channels
-        run: cat bdixtv247.m3u8
+        run: cat iptv.m3u8
       - name: push changes
         run: |
-          git config --global user.name 'Mobarak Hosen Shakil'
-          git config --global user.email 'imShakil@users.noreply.github.com'
+          git config user.name 'Mobarak Hosen Shakil'
+          git config user.email 'imShakil@users.noreply.github.com'
           git add .
-          git commit -am "bdixtv247.m3u8 updated" || exit 0
+          git commit -am "iptv.m3u8 updated" || exit 0
           git push
 
