--- a/.github/workflows/bdiptv.yml
+++ b/.github/workflows/bdiptv.yml
@@ -30,7 +30,7 @@ jobs:
           git add .
           git status
           if ! git diff --cached --quiet; then
-            git commit -a "iptv.m3u8 updated"
+            git commit -m "iptv.m3u8 updated"
             git push
             echo "Channels updated successfully"
           else
