--- a/.github/workflows/bdiptv.yml
+++ b/.github/workflows/bdiptv.yml
@@ -1,5 +1,3 @@
-# Automated workflow to update iptv channels
-
 name: update iptv channels
 on:
   schedule: 
@@ -18,17 +16,21 @@ jobs:
         uses: actions/checkout@v4
         with: 
           token: ${{ secrets.GH_TOKEN }}
+      
       - name: Run Script
         run: |
           wget https://raw.githubusercontent.com/aniketda/iptvtest/refs/heads/main/iptvtest -O iptv.m3u8
+      
       - name: Show Channels
         run: cat iptv.m3u8
+      
       - name: Push Changes
         run: |
           set -x
-          git config user.name ${{ vars.name }}
-          git config user.email ${{ vars.email }}
+          git config user.name "${{ vars.name }}"
+          git config user.email "${{ vars.email }}"
           git add .
+          
           if ! git diff --cached --quiet; then
             git commit -m "iptv.m3u8 updated"
             git push
