--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ VALIDATE_STREAMS=true
 LIVENESS_WORKERS=40
 LIVENESS_TIMEOUT_SECONDS=4
 OUTPUT_FILE=iptv.m3u8
+
+# Required only for local token refresh via autorun.sh
+PLAY_URL=<player-url>
+REFERER=<referrer>
+SPOOF_IP=<ip>
