--- a/.github/workflows/update_token.yml
+++ b/.github/workflows/update_token.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-tokens:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     env:
       JSON_FILE: "features.json"
 
@@ -15,8 +15,8 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v6
 
-      - name: Install dependencies
-        run: sudo apt-get install -y curl jq
+      # - name: Install dependencies
+      #   run: sudo apt-get install -y curl jq
 
       - name: Run update script
         env:
@@ -30,8 +30,8 @@ jobs:
       - name: Commit updated tokens
         run: |
           set -x
-          git config user.name  "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name  "github-actions[bot]"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add $JSON_FILE
           if git diff --cached --quiet; then
             echo "No changes to commit."
