--- a/.github/workflows/update_token.yml
+++ b/.github/workflows/update_token.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Commit updated tokens
         run: |
           set -x
-          git config --local user.name  "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
           git config --local commit.gpgsign false
           git add $JSON_FILE
           if git diff --cached --quiet; then
