cicd: set variables for liveness testing

--- a/.github/workflows/bdiptv.yml
+++ b/.github/workflows/bdiptv.yml
@@ -2,6 +2,9 @@ name: update iptv channels
 on:
   schedule: 
     - cron: '0 0 * * *'
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
